plugins {
  id 'java-test-fixtures'
}

sonar {
  properties {
    property 'sonar.projectName', "${projectTitle} :: Scanner Engine"
  }
}

// Excluding scanner files in order to benefit of incremental build support
sourceSets.test.resources {
  exclude '**/.sonar/**'
}

configurations {
  testImplementation.extendsFrom(compileOnlyApi)
}

dependencies {
  // please keep the list ordered

  api 'ch.qos.logback:logback-classic'
  api 'ch.qos.logback:logback-core'
  api 'commons-codec:commons-codec'
  api 'commons-io:commons-io'
  api 'org.apache.commons:commons-lang3'
  implementation 'org.apache.commons:commons-text'
  api 'com.google.code.gson:gson'
  api 'org.apache.commons:commons-csv'
  api 'com.google.protobuf:protobuf-java'
  api 'com.squareup.okhttp3:okhttp'
  api 'com.fasterxml.staxmate:staxmate'
  implementation 'io.github.hakky54:ayza'
  implementation 'org.bouncycastle:bcprov-jdk18on'
  api 'jakarta.annotation:jakarta.annotation-api'
  api 'org.eclipse.jgit:org.eclipse.jgit'
  api 'org.tmatesoft.svnkit:svnkit'
  api 'org.slf4j:jcl-over-slf4j'
  api 'org.slf4j:jul-to-slf4j'
  api 'org.slf4j:log4j-over-slf4j'
  api 'org.slf4j:slf4j-api'
  api 'org.sonarsource.api.plugin:sonar-plugin-api'
  api 'org.sonarsource.git.blame:git-files-blame'
  api 'org.sonarsource.update-center:sonar-update-center-common'
  api 'org.springframework:spring-context'


  api project(':sonar-core')
  api project(':sonar-sarif')
  api project(':sonar-scanner-protocol')
  api project(':sonar-ws')
  api project(':sonar-duplications')
  api project(':sonar-plugin-api-impl')

  compileOnlyApi 'com.github.spotbugs:spotbugs-annotations'

  testFixturesImplementation 'org.junit.jupiter:junit-jupiter-api'

  testImplementation 'com.squareup.okhttp3:mockwebserver'
  testImplementation 'com.squareup.okhttp3:okhttp'
  testImplementation 'com.tngtech.java:junit-dataprovider'
  testImplementation 'commons-io:commons-io'
  testImplementation 'junit:junit'
  testImplementation 'org.junit.jupiter:junit-jupiter-api'
  testImplementation 'org.junit.jupiter:junit-jupiter-params'
  testImplementation 'org.assertj:assertj-core'
  testImplementation 'com.fasterxml.staxmate:staxmate'
  testImplementation 'org.hamcrest:hamcrest'
  testImplementation 'org.mockito:mockito-core'
  testImplementation 'org.mockito:mockito-junit-jupiter'
  testImplementation 'org.sonarsource.api.plugin:sonar-plugin-api-test-fixtures'
  testImplementation project(':plugins:sonar-xoo-plugin')
  testImplementation 'org.wiremock:wiremock-standalone'
  testImplementation 'org.junit-pioneer:junit-pioneer'
  testImplementation 'org.awaitility:awaitility'

  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
}

license {
  excludes(["**/Fake.java", "**/Fake.groovy", "org/sonar/scanner/cpd/ManyStatements.java", "org/sonar/scm/git/expected-blame/**/*"])
}

// Produce Java 17 bytecode while making sure the code does not use any APIs from Java 21
tasks.withType(JavaCompile).configureEach {
  options.release = 17
}

artifactoryPublish.skip = !deployCommunity

// Used by core plugins
publishing {
  publications {
    mavenJava(MavenPublication) {
      from components.java
      if (release) {
        artifact sourcesJar
        artifact javadocJar
      }
    }
  }
}

test {
  // Enabling the JUnit Platform (see https://github.com/junit-team/junit5-samples/tree/master/junit5-migration-gradle)
  useJUnitPlatform()
}
